Fixed bottom nav on mobile
Hopefully?

--- a/_sass/site/_layout.scss
+++ b/_sass/site/_layout.scss
@@ -109,9 +109,9 @@
   }
 }
 
-/* Smooth scrolling */
 html {
   scroll-behavior: smooth;
+  overflow-x: hidden;
 }
 
 body {
